# echo-ai

./: .dockerignore  .gitattributes  .gitignore  DBAudioOperations_Review.md  DEBUG_README.md  DEPLOY.md  Dockerfile  EchoAI_25Pages_Complete.md  EchoAI_25Pages_Full_Verbatim.md  _cache_review.md  _check_cache.py  _diag_rag.py  _extract_cache.py  _output.txt  _test_all_questions.py  _test_ensemble.txt  _test_rag.py  _test_results.txt  _test_search.py  _test_single_q.py  env.example  main.py  main_debug_no_ws.py  nginx.conf  pip_error.txt  pip_resolve.txt  prebuild_cache.py  proj_desc.md  proj_details.md  questions.md  readme.md  rebuild_self_info.py  requirements.txt  run_dev.py  setup.md  start.sh
rag_persona_db/: README.md  __init__.py  env.example  pyproject.toml  requirements.txt
rag_persona_db/document/: ApplyBots_README.md  CV.docx  Galileo_README.md  ShotGraph_README.md  __init__.py  create_rag_for_documents.py  echoAI_readme.md  masx-hotspots_README.md
rag_persona_db/document/LinkedInData/: Ad_Targeting.csv  Causes You Care About.csv  Certifications.csv  Company Follows.csv  Connections.csv  Education.csv  Email Addresses.csv  Endorsement_Given_Info.csv  Endorsement_Received_Info.csv  Events.csv  Invitations.csv  Job Applicant Saved Screening Question Responses.csv  Languages.csv  Learning.csv  PhoneNumbers.csv  Positions.csv  Private_identity_asset.csv  Profile.csv  Projects.csv  Receipts_v2.csv  Recommendations_Given.csv  Registration.csv  Rich_Media.csv  SavedJobAlerts.csv  Skills.csv  Whatsapp Phone Numbers.csv  messages.csv
rag_persona_db/document/LinkedInData/Jobs/: Job Applications.csv  Job Applications_1.csv  Job Applications_2.csv  Job Applications_3.csv  (+5 more)
rag_persona_db/document/sample_inputs/: project_portfolio.md  sample_cv.txt
rag_persona_db/rag_core/: __init__.py  agno_flow.py  chunking.py  embeddings.py  loaders.py  logging_config.py  schema.py  settings.py  store.py  utils.py
rag_persona_db/tests/: test_cli.py  test_schema.py  test_settings.py
(+231 files in other folders)
