[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_persona_db"
version = "0.1.0"
description = "RAG Vector Database for Personal Documents and Personality Data"
authors = [
    {name = "AI Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agno>=0.1.0",
    "chromadb>=0.4.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "trafilatura>=7.0.0",
    "readability-lxml>=0.8.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
rag-persona = "rag_persona_db.document.create_rag_for_documents:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_persona_db*"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.black]
target-version = ['py311']
line-length = 88
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=rag_persona_db --cov-report=term-missing --cov-report=html"
